# rori-mathtext-answers

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  app.py  cloudbuild.yaml  db.sqlite3  pyproject.toml  requirements.txt  users.json
.github/workflows/: deploy-answers-api.yaml  pytest.yaml
data/: master_test_text2int.csv  test_data_text2int.csv  text2int_results.csv
docs/: google-cloud-auth-proxy-setup.md  google-cloud-run-cloud-sql-connection-guide.md  transitions_math_quiz_example.ipynb
mathtext_fastapi/: cache.py  constants.py  conversation_manager.py  curriculum_mapper.py  endpoint_utils.py  formaters.py  global_state_manager.py  intent_classification.py  logging.py  math_quiz_fsm.py  math_subtraction_fsm.py  nlu.py  request_validators.py  response_formaters.py  student_ability_model.py  supabase_logging.py  supabase_logging_async.py  supabase_logging_psycopg.py  v2_conversation_manager.py  v2_nlu.py  v3_nlu.py  validators.py
mathtext_fastapi/data/: Rori_Framework_v1.xlsx  curriculum_framework_for_tests.xlsx  intent_classification_model.joblib  labeled_data.csv  text2int_results.csv
mathtext_fastapi/django_logging/: django_logging.py  manage.py  settings.py  student_ability_model.py  utils.py
mathtext_fastapi/django_logging/django_app/: config.py  django_app.py  models.py
mathtext_fastapi/django_logging/django_app/migrations/: 0001_initial.py  0002_remove_userstatus_current_activity_and_more.py  0002_userstatus_userproperties.py  0003_alter_activity_options_alter_activitysession_options_and_more.py  0003_alter_userstatus_current_activity_session.py  0004_rename_content_activity_properties.py  0005_remove_mathanswermessagemetadata_answer_type.py  0006_alter_activity_table_alter_activitysession_table_and_more.py  0007_mathanswermessagemetadata_user_attempts.py
mathtext_fastapi/django_logging/etl/: generate_db_objects.py  rori_bkt_params_open_line.csv  rori_bkt_params_rising_line.csv  rori_lesson_list.csv
mathtext_fastapi/endpoint_utils/: endpoint_utils.py  request_validators.py  response_formaters.py
mathtext_fastapi/nlu_evaluations/: evaluation_utils.py  evaluations.py
modules/: nlu.py
scripts/: api_scaling.py  api_scaling.sh  build.sh  bump_version.py  make_request.py  make_request.sh  plot_calls.py  refactor_message_evaluations.py
scripts/quiz/: data.csv  generators.py  hints.py  questions.py  utils.py
templates/: home.html
tests/: simulate_api_call.py  test_api.py  test_decimals.py  test_exponents.py  test_fractions.py  test_integers.py  test_intents_recognition.py  test_invalid_input.py  test_keywords.py  test_logging.py  test_mastery.py  test_signs.py  test_text2int.py  test_text_answers.py  test_time.py
