[tool.poetry]
name = "MathText_FastAPI"
version = "2.0.4"
authors = [
  "Sebastian Larsen <sebastianlarson22@gmail.com>",
  "Çetin ÇAKIR <cetincakirtr@gmail.com>",
  "Hobson Lane <gitlab@totalgood.com>",
  "Greg Thompson <greg+pypi@tangibleai.com>",
  ]
description = "Natural Language Understanding (text processing) for math symbols, digits, and words with a Gradio user interface and REST API."
readme = "README.md"
# requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
asyncpg = "*"
fastapi = ">=0.104.0"
fuzzywuzzy = "*"
httpx = "<0.22,>=0.19"
mathtext = "2.0.3"
openpyxl = "*"
psycopg2 = "*"
python = ">=3.10,<4.0"
python-Levenshtein = "*"
redis = "*"
requests = "*"
sentry_sdk = {extras = ["fastapi"], version = "*"}
sqlalchemy = "*"
toml = "*"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
transitions = "*"
uvicorn = ">=0.23.0"


# TODO: Add a pytest section doctest: +ELLIPSIS
[tool.pytest.ini_options]
addopts = "--doctest-modules"


[tool.poetry.group.dev.dependencies]
pytest = "*"
toml = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
